# mitai

./: package.json  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: types.rs
src-tauri/src/services/db/: lib.rs
src/routes/: __root.tsx
