
[package]
name = "mitai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mitai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[workspace]
members = [".",  "migration"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
migration = { path = "migration" } # depends on your needs

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros","mock","macros","with-chrono","with-time","with-json","with-rust_decimal","with-bigdecimal","with-uuid" ] }


[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
